# sphinx

./: rust-toolchain.toml
examples/: Cargo.toml
examples/simple-signature/program/: Cargo.toml
examples/simple-signature/program/elf/: riscv32im-succinct-zkvm-elf
examples/simple-signature/program/src/: main.rs
examples/simple-signature/script/: Cargo.toml  run.sh
examples/simple-signature/script/src/: main.rs
